# preheating_interface

./: .gitignore  LedResponseParser.cpp  LedResponseParser.hpp  PreheatingAnswer.cpp  PreheatingAnswer.hpp  PreheatingAnswer.ino  PreheatingCommand.cpp  PreheatingCommand.hpp  PreheatingCommand.ino  README.md  ResponseProcessor.cpp  ResponseProcessor.hpp  Runnable.hpp  RunnableScheduler.cpp  RunnableSequence.cpp  SomeTest.hpp  SwitchOnCommand.hpp  actions.cpp  actions.hpp  preheating_interface.ino  request_executor.ino  response_processor.cpp  response_processor.h  testindex.txt  testing.md  tests.sh  using-vs-code.md
Commands/: IPreheatingCommand.hpp  PowerOffCommand.hpp  PowerOn.hpp  PowerOnCommand.hpp  PowerOnHardwareExecutor.cpp  PreheatingCommandResult.cpp  PreheatingCommandResult.hpp
HardwareExecutor/: HardwareExecutor.hpp
HardwareInterface/: HardwareExecutor.hpp  LedResponseParser.hpp  PreheatingRemote.cpp  actions.cpp  actions.hpp
Runnable/: Runnable.hpp  RunnableScheduler.cpp  RunnableSequence.cpp
esp32/: README.md  docker-compose.yml
esp32/hello_world/main/: CMakeLists.txt  hello_world_main.cpp  setup.hpp
esp32/preheating_interface/main/: CMakeLists.txt  app_main.cpp  setup.hpp  uart.hpp
esp32/preheating_interface/main/lib/: libpreheatinginterface  libscheduling
libpreheatinginterface/: library.properties
libpreheatinginterface/src/: AbstractCommand.cpp  CMakeLists.txt  CommandHelper.cpp  LedResponseList.cpp  LibPreheatingInterface.hpp  PowerOffCommand.cpp  PowerOffResult.cpp  PowerOnCommand.cpp  PowerOnResult.cpp  PreheatingAnswer.cpp
libscheduling/: library.properties
sms-interface/: concept.md
src/: RunnableSequence.cpp
(+28 files in other folders)
